Fix date input spacing

--- a/src/components/ItemDetailsModal/ItemDetailsModal.scss
+++ b/src/components/ItemDetailsModal/ItemDetailsModal.scss
@@ -120,6 +120,7 @@
         display: flex;
         flex-wrap: wrap;
         margin-bottom: 0.25rem;
+        column-gap: 1rem;
     }
 
     &__date {
